# C_SWSB

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/: Info.plist  SWSB.icns
include/: SWSB.h  SWSB_assets.h  SWSB_background.h  SWSB_ent.h  SWSB_handler.h  SWSB_screen_text.h  SWSB_timer.h
src/: SWSB.c  SWSB_assets.c  SWSB_background.c  SWSB_ent.c  SWSB_handler.c  SWSB_screen_text.c  SWSB_timer.c  main.c
